@@ -348,6 +348,7 @@ TESTS_ipython = \
 # do not consider part of the documentation: those have to start
 # with a _.
 TESTS_python = \
+  python/341.py \
   python/_altscc.ipynb \
   python/_autparserr.ipynb \
   python/_aux.ipynb \
